--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ section{
   position: relative;
   height: 100vh;
   width: 100%;
-  background-image: linear-gradient(to left, rgba(0,0,0,0.6), rgba(0,0,0,0.3)), url(./img/background.jpg);
+  background-image: linear-gradient(to left, rgba(0,0,0,0.6), rgba(0,0,0,0.3)), url(background.jpg);
   background-size: cover;
   background-position: bottom center;
   display: flex;
